fix: 处理行overflow的情况

--- a/app/style/solarized.less
+++ b/app/style/solarized.less
@@ -61,29 +61,34 @@
 		font-weight: bold !important;
 	}
 	@line-height: 20px !important;
-	code {
+	&.pre {
 		line-height: @line-height;
-		font-size: 14px !important;
-		span {
+		code {
 			line-height: @line-height;
 			font-size: 14px !important;
-			font-family: Consolas, Courier, 'Courier New', monospace;
+			tab-size: 4 !important;
+			span {
+				line-height: @line-height;
+				font-size: 14px !important;
+				font-family: Consolas, Courier, 'Courier New', monospace;
+			}
 		}
 	}
 	.lavandula-line {
-		display: inline-block !important;
+		display: inline-block;
 		line-height: @line-height;
 		height: @line-height;
+		white-space: pre;
 		width: 100%;
 		&:hover {
-			background: #f0e7d4 !important;
+			background: #f0e7d4;
 		}
 	}
 	.lavandula-line-number {
-		width: 48px !important;
-		padding-right: 16px !important;
-		text-align: right !important;
-		display: inline-block !important;
-		color: #967734 !important
+		width: 48px;
+		padding-right: 16px;
+		text-align: right;
+		display: inline-block;
+		color: #967734
 	}
 }
